# open-pencil

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  autoresearch.jsonl  components.d.ts  doc2ts-config.ts  index.html  oxlint.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  preview.yml
desktop/: Cargo.toml  tauri.conf.json
desktop/src/: lib.rs
docs/: backend-api-spec.md  frontend-cloud-storage-migration.md  index.md
docs/.vitepress/: config.ts
docs/development/: contributing.md  openspec.md  roadmap.md  testing.md
docs/guide/: architecture.md  features.md  figma-comparison.md  getting-started.md  tech-stack.md
docs/reference/: file-format.md  keyboard-shortcuts.md  mcp-tools.md  node-types.md  scene-graph.md
lint/: plugin.js
skills/open-pencil/: SKILL.md
src/: constants.ts  demo.ts  main.ts  router.ts
src/ai/: acp-map-update.ts  acp-permission.ts  acp-transport.ts  chat-debug.ts  system-prompt.md  tools.ts
src/api/: base.ts  methods.ts
src/automation/: server.ts  spawn-mcp.ts  vite-plugin.ts
src/components/: AppMenu.vue  AppToast.vue  CanvasContextMenu.vue  ChatPanel.vue  CodePanel.vue  DesignPanel.vue  EditorCanvas.vue  FillPicker.vue  FontPicker.vue  LanguageSelector.vue  LayerTree.vue  LayersPanel.vue  MobileDrawer.vue  MobileHud.vue  NodeContextMenuContent.vue  PagesPanel.vue  PropertiesPanel.vue  SafariBanner.vue  TabBar.vue  Toolbar.vue  VariablesDialog.vue
src/composables/: use-auth.ts  use-canvas-input.ts  use-canvas.ts  use-chat.ts  use-cloud-settings.ts  use-collab.ts  (+6 more)
(+159 files in other folders)
